kubernetes/object-detector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: object-detector-service # New unique service name
  namespace: spe-project
  labels:
    app: object-detector
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
    prometheus.io/path: "/api/metrics"
spec:
  selector:
    app: object-detector-backend # MUST match the label of the object-detector pods
  ports:
  - name: http-object
    protocol: TCP
    port: 80
    targetPort: 8001
  type: ClusterIP
